fix delete, add get
